# RUST_tauri_freefall_parser

./: .gitignore  eslint.config.js  index.html  operators_list.toml  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx
src-tauri/: Cargo.toml  config.toml  operators_list.toml  rustc-ice-2024-07-26T16_28_52-27472.txt  tauri.conf.json5
src-tauri/E/MISC/: operator_id.txt
src-tauri/F/MISC/: operator_id.txt
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core_timer.rs  ffmpeg_serv.rs  file_sys_serv.rs  macros.rs  main.rs  operators_serv.rs  redux_serv.rs  store_app.rs  store_config.rs  store_timer.rs  telemetry_analysis.rs  telemetry_parser_serv.rs
src-tauri/src/utils/: u_serv.rs
src-tauri/telemetry_parser/src/: lib.rs  util.rs
src-tauri/telemetry_parser/src/cooke/: mod.rs
src-tauri/telemetry_parser/src/dji/: csv.rs
src/API/: api.ts  apiAppStore.ts  apiConfigStore.ts  apiHelpers.ts  apiSettingsStore.ts  apiSystemStore.ts  apiTimerStore.ts  loggerMw.ts
src/assets/: SVG_Icons.tsx
src/components/ClockBlock/: ClockBlock.tsx  ClockBlockInner.tsx  clockBlock.css  clockBlockFZone.css  index.ts  types.ts
src/components/ModalDialog/: ModalDialog.tsx  index.ts  styles-modal.css
src/components/Numpad/: Numpad.tsx  index.ts  numpadStyles.css
src/components/ParsingFiles/: FileRow.tsx  ParsingFiles.tsx  index.ts  psControls.tsx  styles.css
src/components/SpeedIndicator/: SpeedIndicator.tsx  index.ts  speedIndicator.css
src/components/TimeblocksList/: TimeblocksList.tsx  index.ts  timeblocksList.css
src/components/VentilationIndicator/: VentilationIndicator.tsx  index.ts  ventilationIndicator.css
src/components/controls/: TogglePanelBtn.tsx  buttons.tsx  styles.css
src/customHooks/: index.ts  useBus.js  useDebounce.ts  useKeypress.ts  useRepeatableLongPress.ts  useThrottle.ts
src/helpers/: cx.ts  index.ts
src/panels/ControlPanel_V1/: ControlPanel_V1.tsx  ControlsLayout_V1.tsx  index.ts  (+2 more)
src/serv_window/: index.html  main.tsx
(+35 files in other folders)
