[package]
name = "freefall_parser"
version = "0.0.0"
description = "FREEFALL PARSER"
authors = ["NW"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = ["config-json5"] }

[dependencies]
# tauri = { version = "1.4", features = [ "window-set-fullscreen", "shell-open"] }# config = { version = "0.13", features = ["json5"] }
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redux-rs = "0"
regex = "1"
once_cell = "1.19.0"
rfd = "0.14.1"
# lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
